--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem 0.5rem;
+  padding: 1rem 0.5rem 2rem 0.5rem;
   text-align: center;
 }
 
